syntax = "proto3";

option csharp_namespace = "Proto.Interfaces";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayHello2 (HelloRequest) returns (HelloReply2);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
message HelloReply2 {
    oneof result_dto {
        HelloReply Data = 1;
        ErrorResponse Error = 2;
    }
}

message ErrorResponse {
    bool was_successful = 1;
    string error_message = 2;
    bool is_business_error = 3;
    string error_code = 4;
}